hphp/test/slow/unary_operators/1439.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: y' in %s/unary_operators/1439.php:6
Stack trace:
%A
